# panic-prep-backend

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
prompts/: SPEC.md  beamer_generator.prompt  beamer_topics_only.prompt  latex_repair.prompt  materials_extraction.prompt  narration_generator.prompt  topic_list_generator.prompt
src/: config.py  main.py
src/api/: analysis.py  app.py  materials.py  presentation.py  topics.py
src/services/: materials.py  materials_extraction.py  presentation.py  topic_outline.py  tts.py
src/utils/: auth.py  commands.py  file_store.py  latex.py  llm.py
tests/: load_prompt_template.py  test_file_store.py  test_prepare_payload.py
